--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.18.1",
     "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.12.9",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
