--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-	"installCommand": "npm install --force"
+  "installCommand": "npm install --force",
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
