--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
+    "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
@@ -73,6 +74,7 @@
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -81,7 +83,7 @@
     "prettier": "^3.5.3",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
-    "vitest": "^3.0.5",
+    "vitest": "^3.2.4",
     "web-vitals": "^4.2.4"
   }
 }
