Update branch references from 'main' to 'master' in deployment workflows

--- a/.github/workflows/preview_deployment.yml
+++ b/.github/workflows/preview_deployment.yml
@@ -5,7 +5,8 @@ env:
 on:
   push:
     branches-ignore:
-      - main
+      - master
+  pull_request:
 jobs:
   code-quality:
     runs-on: ubuntu-latest
