--- a/.github/workflows/preview_deployment.yml
+++ b/.github/workflows/preview_deployment.yml
@@ -7,6 +7,9 @@ on:
     branches-ignore:
       - master
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
+    branches:
+      - master
 jobs:
   code-quality:
     runs-on: ubuntu-latest
@@ -21,8 +24,12 @@ jobs:
         run: npm ci
       - name: Run ESLint
         run: npm run lint
+      - name: Run Prettier check
+        run: npx prettier --check .
       - name: Run TypeScript type check
         run: npm run typecheck
+      - name: Run Tests
+        run: npm test -- --watchAll=false
 
   Deploy-Preview:
     runs-on: ubuntu-latest
