--- a/.github/workflows/production_deployment.yml
+++ b/.github/workflows/production_deployment.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm run lint
       - name: Run TypeScript type check
         run: npm run typecheck
+      - name: Run Tests
+        run: npm test -- --watchAll=false
 
   Deploy-Production:
     runs-on: ubuntu-latest
