--- a/.github/workflows/preview_deployment.yml
+++ b/.github/workflows/preview_deployment.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run TypeScript type check
         run: npm run typecheck
       - name: Run Tests
-        run: npm test -- --watchAll=false
+        run: npm test 
 
   Deploy-Preview:
     runs-on: ubuntu-latest
