--- a/.github/workflows/production_deployment.yml
+++ b/.github/workflows/production_deployment.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run TypeScript type check
         run: npm run typecheck
       - name: Run Tests
-        run: npm test -- --watchAll=false
+        run: npm test
 
   Deploy-Production:
     runs-on: ubuntu-latest
