Update pull request trigger types in preview_deployment.yml for better handling of edits

--- a/.github/workflows/preview_deployment.yml
+++ b/.github/workflows/preview_deployment.yml
@@ -3,11 +3,8 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
-  push:
-    branches-ignore:
-      - master
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    types: [opened, synchronize, reopened, ready_for_review, edited]
     branches:
       - master
 jobs:
