Update formatting scripts in package.json and adjust Prettier checks in deployment workflows; enhance documentation with improved examples and formatting consistency across multiple markdown files.

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:watch:coverage": "vitest run --coverage",
     "test:watch:coverage:ui": "vitest run --coverage --ui",
     "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "format": "prettier --write .",
+    "check": "prettier --check ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
