--- a/.github/workflows/preview_deployment.yml
+++ b/.github/workflows/preview_deployment.yml
@@ -19,12 +19,16 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+
       - name: Run ESLint
         run: npm run lint
+
       - name: Run Prettier check
-        run: npx prettier --check .
+        run: npm run format
+
       - name: Run TypeScript type check
         run: npm run typecheck
+
       - name: Run Tests
         run: npm test
 
