--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build && tsc",
     "serve": "vite preview",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
+    "test": "vitest",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
